--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   http: ^0.13.4
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
